crates/kul-core/tests/snapshots/parser__parse_marriage_minimal.snap
---
source: crates/kul-core/tests/parser.rs
expression: "render(\"marriage m_a_b alice bob start:1972-05-12\\n\")"
---
ast: Document {
    version: None,
    statements: [
        Marriage(
            MarriageStmt {
                span: ByteSpan {
                    start: 0,
                    end: 41,
                },
                keyword_span: ByteSpan {
                    start: 0,
                    end: 8,
                },
                id: Ident {
                    name: "m_a_b",
                    span: ByteSpan {
                        start: 9,
                        end: 14,
                    },
                },
                spouse_a: Ident {
                    name: "alice",
                    span: ByteSpan {
                        start: 15,
                        end: 20,
                    },
                },
                spouse_b: Ident {
                    name: "bob",
                    span: ByteSpan {
                        start: 21,
                        end: 24,
                    },
                },
                fields: [
                    MarriageField {
                        span: ByteSpan {
                            start: 25,
                            end: 41,
                        },
                        name_span: ByteSpan {
                            start: 25,
                            end: 30,
                        },
                        kind: Start(
                            DateLit {
                                span: ByteSpan {
                                    start: 31,
                                    end: 41,
                                },
                                circa: false,
                                year: 1972,
                                month: Some(
                                    5,
                                ),
                                day: Some(
                                    12,
                                ),
                            },
                        ),
                    },
                ],
            },
        ),
    ],
}
diagnostics: []
