crates/kul-core/tests/snapshots/parser__parse_person_with_adoption_sub_statement.snap
---
source: crates/kul-core/tests/parser.rs
expression: "render(\"person ravi name:\\\"Ravi\\\" gender:male\\n  adoption m_alice_bob start:1985-06-01\\n\")"
---
ast: Document {
    version: None,
    statements: [
        Person(
            PersonStmt {
                span: ByteSpan {
                    start: 0,
                    end: 75,
                },
                keyword_span: ByteSpan {
                    start: 0,
                    end: 6,
                },
                id: Ident {
                    name: "ravi",
                    span: ByteSpan {
                        start: 7,
                        end: 11,
                    },
                },
                fields: [
                    PersonField {
                        span: ByteSpan {
                            start: 12,
                            end: 23,
                        },
                        name_span: ByteSpan {
                            start: 12,
                            end: 16,
                        },
                        kind: Name(
                            StringValue {
                                value: "Ravi",
                                span: ByteSpan {
                                    start: 17,
                                    end: 23,
                                },
                            },
                        ),
                    },
                    PersonField {
                        span: ByteSpan {
                            start: 24,
                            end: 35,
                        },
                        name_span: ByteSpan {
                            start: 24,
                            end: 30,
                        },
                        kind: Gender(
                            GenderValue {
                                value: Male,
                                span: ByteSpan {
                                    start: 31,
                                    end: 35,
                                },
                            },
                        ),
                    },
                ],
                birth: None,
                adoptions: [
                    AdoptionSub {
                        span: ByteSpan {
                            start: 38,
                            end: 75,
                        },
                        keyword_span: ByteSpan {
                            start: 38,
                            end: 46,
                        },
                        marriage_ref: Ident {
                            name: "m_alice_bob",
                            span: ByteSpan {
                                start: 47,
                                end: 58,
                            },
                        },
                        fields: [
                            AdoptionField {
                                span: ByteSpan {
                                    start: 59,
                                    end: 75,
                                },
                                name_span: ByteSpan {
                                    start: 59,
                                    end: 64,
                                },
                                kind: Start(
                                    DateLit {
                                        span: ByteSpan {
                                            start: 65,
                                            end: 75,
                                        },
                                        circa: false,
                                        year: 1985,
                                        month: Some(
                                            6,
                                        ),
                                        day: Some(
                                            1,
                                        ),
                                    },
                                ),
                            },
                        ],
                    },
                ],
                malformed_fields: [],
            },
        ),
    ],
}
diagnostics: []
